[package]
authors = ["David Flemström <david.flemstrom@gmail.com>"]
name = "sparkey-diff"
version = "0.1.0"

[dependencies]
docopt = "0.6.86"
docopt_macros = "0.6.87"
error-chain = "0.7.1"
itertools = "0.5.7"
jobsteal = "0.5.1"
num_cpus = "1.2.0"
pbr = "1.0.0-alpha.1"
protobuf = "1.0.24"
rustc-serialize = "0.3.22"
vcdiff = "0.1.0"

[dependencies.sparkey]
branch = "native"
git = "https://github.com/dflemstr/sparkey-rs.git"

[profile]

[profile.release]
lto = true
